# mailFlagger

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  pyproject.toml
src/mailflagger/: __init__.py  __main__.py  analyzer.py  blacklist.py  cli.py  export.py  logging_utils.py  scoring.py  split.py  state.py
tests/: conftest.py  test_analyzer.py  test_blacklist.py  test_cli.py  test_export.py  test_logging_utils.py  test_scoring.py  test_split.py  test_state.py
