[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailflagger"
version = "0.4.0"
description = "Analyze exported spam sender lists and suggest domain-level blacklists, so you block by domain instead of hitting your mail provider's per-address blacklist cap."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Luraminaki" },
]
keywords = ["email", "spam", "blacklist", "yahoo", "outlook"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Email :: Filters",
]
dependencies = []

[project.optional-dependencies]
psl = [
    "tldextract>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "tldextract>=5.0",
]

[project.scripts]
mailflagger = "mailflagger.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mailflagger"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "T20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
